# agent-matrix

./: README.md  SPEC.md  pyproject.toml
src/: quicksort.py
src/agent_matrix/: __init__.py  aggregator.py  cli.py  decomposer.py  document.py  engine.py  job_manager.py  knowledge.py  master.py  metrics.py  pool.py  session.py
src/agent_matrix/agents/: __init__.py  base.py  coder.py  reviewer.py  tester.py
src/agent_matrix/llm/: __init__.py  adapter.py  minimax.py
src/agent_matrix/security/: __init__.py  scanner.py
tests/: test_agents.py  test_decomposer.py  test_document.py  test_engine.py  test_quicksort.py  test_security.py
