[project]
name = "agent-matrix"
version = "0.1.0"
description = "轻量级多Agent协作开发框架"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
plugins = ["pytest-asyncio"]

[tool.ruff]
line-length = 100
target-version = "py311"
