[project]
name = "agent-matrix"
version = "0.1.0"
description = "轻量级多Agent协作开发框架"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "红线", email = "hongxian@example.com"}
]
keywords = ["multi-agent", "ai", "coding", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
agent-matrix = "agent_matrix.cli:main"

[project.urls]
Homepage = "https://github.com/xiachen332/agent-matrix"
Repository = "https://github.com/xiachen332/agent-matrix"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_matrix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
plugins = ["pytest-asyncio"]

[tool.ruff]
line-length = 100
target-version = "py311"
